<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="user_signup_title">User\'s Signup Page</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="dob_not_selected">Date of Birth: Not Selected</string>
    <string name="select_gender">Select Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_phone" translatable="false">Enter your phone number</string>
    <string name="hint_email" translatable="false">Enter your email</string>
    <string name="hint_password" translatable="false">Enter your password</string>
    <string name="doctor_checkbox" translatable="false">Are you a Doctor? Click this</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="app_name">Fitness and Medical</string>
    <string name="fitness_workout" translatable="false">Fitness Workout</string>
    <string name="recommended_diet" translatable="false">Recommended Diet</string>
    <string name="medication_alarm" translatable="false">Medication Alarm</string>
    <string name="doctor_contact" translatable="false">Doctor Contact</string>
    <string name="need_trainer" translatable="false">You need a trainer</string>
    <string name="nav_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="nav_drawer_close" translatable="false">Close navigation drawer</string>
    <string-array name="forgot_roles_array">
        <item>User</item>
        <item>Doctor</item>
    </string-array>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="personal_data" translatable="false">Personal Data</string>
    <string name="profile_picture" translatable="false">Profile Picture</string>
    <string name="doctor_change_picture" translatable="false">Change Picture</string>
    <string name="doctor_edit_profile" translatable="false">Edit Profile</string>
    <string name="user_id" translatable="false">User ID:</string>
    <string name="username" translatable="false">Username:</string>
    <string name="doctor_email" translatable="false">Email:</string>
    <string name="doctor_gender" translatable="false">Gender:</string>
    <string name="doctor_phone" translatable="false">Phone:</string>
    <string name="date_of_birth" translatable="false">Date of Birth:</string>
    <string name="height" translatable="false">Height:</string>
    <string name="weight" translatable="false">Weight:</string>
    <string name="fitness_goal" translatable="false">Fitness Goal:</string>
    <string name="experience_level" translatable="false">Experience Level:</string>
    <string name="bmi" translatable="false">BMI:</string>
    <string name="workout_days" translatable="false">Workout Days:</string>
    <string name="exercises" translatable="false">Exercises:</string>
    <string name="meals" translatable="false">Meals:</string>
    <string name="_5_9" translatable="false">5\'9\\</string>
    <string name="admin_page_title" translatable="false">Admin\'s Page</string>
    <string name="back_button_desc" translatable="false">Back</string>
    <string name="manage_users" translatable="false">Manage Users</string>
    <string name="manage_doctors" translatable="false">Manage Doctors</string>
    <string name="add_exercise" translatable="false">Add Exercise</string>
    <string name="manage_meals" translatable="false">Manage Meals</string>
    <string name="welcome_text" translatable="false">Welcome</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="login_button" translatable="false">Login</string>
    <string name="sign_up_button" translatable="false">Sign Up</string>
    <string name="welcome_illustration_desc" translatable="false">Welcome Illustration</string>
    <string name="switch_on" translatable="false">On</string>
    <string name="switch_off" translatable="false">Off</string>
    <string name="welcome_title" translatable="false">Welcome to FitnessPro</string>
    <string name="setup_description" translatable="false">Let\'s set up your profile to help you achieve your fitness goals!</string>
    <string name="height_label" translatable="false">Enter Your Height (cm)</string>
    <string name="height_hint" translatable="false">e.g., 170</string>
    <string name="height_input" translatable="false">Height Input Field</string>
    <string name="weight_label" translatable="false">Enter Your Weight (kg)</string>
    <string name="weight_hint" translatable="false">e.g., 65</string>
    <string name="weight_input" translatable="false">Weight Input Field</string>
    <string name="goal_label" translatable="false">Select Your Fitness Goal</string>
    <string name="goal_spinner" translatable="false">Fitness Goal Spinner</string>
    <string name="experience_label" translatable="false">Your Experience Level</string>
    <string name="experience_spinner" translatable="false">Experience Level Spinner</string>
    <string name="days_label" translatable="false">How Many Days Can You Workout Weekly?</string>
    <string name="days_spinner" translatable="false">Workout Days Spinner</string>
    <string name="continue_button" translatable="false">Continue</string>
    <string name="doctor_welcome_page" translatable="false">Doctor Welcome page</string>
    <string name="specialty_hint" translatable="false">e.g., Cardiologist</string>
    <string name="years_of_experience" translatable="false">Years of Experience</string>
    <string name="years_of_experience_hint" translatable="false">e.g., 10</string>
    <string name="experience_description" translatable="false">Experience Description</string>
    <string name="experience_description_hint" translatable="false">Describe your experience...</string>
    <string name="address_hint" translatable="false">e.g., 123 Clinic Street, City</string>
    <string name="license_number_hint" translatable="false">e.g., D123456</string>
    <string name="save_doctor_info" translatable="false">Save Doctor Info</string>
    <string name="meal_suggestions" translatable="false">Meal Suggestions</string>
    <string name="breakfast" translatable="false">Breakfast 🍳</string>
    <string name="lunch" translatable="false">Lunch 🌮</string>
    <string name="dinner" translatable="false">Dinner 🍽️</string>
    <string name="pre_workout" translatable="false">Pre-Workout 🏋️</string>
    <string name="post_workout" translatable="false">Post-Workout 🥤</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="sound_on_off" translatable="false">Sound ON/OFF</string>
    <string name="keep_screen_on" translatable="false">Keep Screen On</string>
    <string name="privacy_security" translatable="false">Privacy and Security</string>
    <string name="accessibility_features" translatable="false">Accessibility Features</string>
    <string name="change_fitness_goals" translatable="false">Change Your Fitness Goals</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="doctor_profile" translatable="false">Doctor Profile</string>
    <string name="change_picture" translatable="false">Change Picture</string>
    <string name="full_name" translatable="false">Full Name:</string>
    <string name="email" translatable="false">Email:</string>
    <string name="phone" translatable="false">Phone:</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="dob" translatable="false">Date of Birth:</string>
    <string name="specialty" translatable="false">Specialty:</string>
    <string name="years_experience" translatable="false">Years of Experience:</string>
    <string name="experience_details" translatable="false">Experience Details:</string>
    <string name="license_number" translatable="false">License Number:</string>
    <string name="address" translatable="false">Address:</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="doctors_page" translatable="false">Doctor\'s Page</string>
    <string name="doctors_manage_users" translatable="false">Manage Users</string>
    <string name="doctors_manage_exercises" translatable="false">Manage Exercises</string>
    <string name="doctors_manage_meals" translatable="false">Manage Meals</string>
    <string name="enter_doctor_id_hint" translatable="false">Enter Doctor ID to delete</string>
    <string name="get_doctors" translatable="false">Get Doctors</string>
    <string name="delete_doctor" translatable="false">Delete Doctor</string>
    <string name="admins_page" translatable="false">Admin\'s Page</string>
    <string name="exercise_id_hint" translatable="false">Exercise Id</string>
    <string name="add_exercise_to_db" translatable="false">Add Exercise To Database</string>
    <string name="exercise_list_placeholder" translatable="false">Exercises will appear here</string>
    <string name="view_exercises_from_table" translatable="false">View Exercises From Table</string>
    <string name="assign_exercises_for_users" translatable="false">Assign Exercises For Users</string>
    <string name="delete_exercises_from_table" translatable="false">Delete Exercises From Table</string>
    <string name="meal_id_hint" translatable="false">Meal Id</string>
    <string name="add_meals_to_db" translatable="false">Add Meals To the Database</string>
    <string name="meals_list_placeholder" translatable="false">Meals will appear here</string>
    <string name="view_meals_in_table" translatable="false">View Meals in the Table</string>
    <string name="assign_meals_for_users" translatable="false">Assign Meals For Users</string>
    <string name="rest_timer" translatable="false">Rest Timer</string>
    <string name="enter_rest_time_hint" translatable="false">Enter Rest Time (seconds)</string>
    <string name="start_timer" translatable="false">Start Timer</string>
    <string name="reset_timer" translatable="false">Reset Timer</string>
    <string name="timer_default" translatable="false">00:00</string>
    <string name="nav_home_title" translatable="false">Home</string>
    <string name="nav_home_desc" translatable="false">Navigate to the home screen</string>
    <string name="nav_settings_title" translatable="false">Settings</string>
    <string name="nav_settings_desc" translatable="false">Open settings to adjust preferences</string>
    <string name="nav_shop_title" translatable="false">Shop</string>
    <string name="nav_shop_desc" translatable="false">Go to the shop to browse products</string>
    <string name="nav_my_profile_title" translatable="false">My Profile</string>
    <string name="nav_my_profile_desc" translatable="false">Navigate to your profile page</string>
    <string name="nav_other_apps_title" translatable="false">Other Apps</string>
    <string name="nav_other_apps_desc" translatable="false">View other apps from this developer</string>
    <string name="nav_feedback_title" translatable="false">Feedback</string>
    <string name="nav_feedback_desc" translatable="false">Give feedback on the app</string>
    <string name="nav_share_title" translatable="false">Share</string>
    <string name="nav_share_desc" translatable="false">Share this app with others</string>
    <string name="nav_rate_title" translatable="false">Rate Us</string>
    <string name="nav_rate_desc" translatable="false">Rate this app on the Play Store</string>
    <string name="nav_progress_desc">Progress</string>
    <string name="nav_progress_title">Progress</string>
</resources>