<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Home Menu Item -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home_title"
        android:contentDescription="@string/nav_home_desc"
        app:showAsAction="ifRoom" />

    <!-- Settings Menu Item -->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings_title"
        android:contentDescription="@string/nav_settings_desc"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/progress"
        android:title="@string/nav_progress_title"
        android:contentDescription="@string/nav_progress_desc"
        app:showAsAction="ifRoom" />
    <!-- Shop Menu Item -->
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/nav_shop_title"
        android:contentDescription="@string/nav_shop_desc"
        app:showAsAction="ifRoom" />

</menu>
