<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/mainLayout"
    android:background="@drawable/ic_bbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white"
            app:navigationContentDescription="@string/nav_drawer_open" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_arrow"
                android:layout_gravity="start"
                android:layout_marginTop="13dp" />
            <!--            android:background="?attr/selectableItemBackgroundBorderless"-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Doctor Profile"
                android:textSize="20sp"
                android:textColor="#4A6FA5"
                android:textStyle="bold"
                android:gravity="center" />

            <View
                android:layout_width="48dp"
                android:layout_height="48dp" />
        </LinearLayout>

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/ExerciseImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default_profile"
            android:background="@drawable/circle_shape"
            android:contentDescription="Profile Picture"
            android:layout_marginBottom="8dp"/>

        <!-- Change Picture Button -->
        <Button
            android:id="@+id/editProfileImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_change_picture"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>

        <!-- Details Section -->
        <TextView style="@style/ProfileLabel" android:text="@string/full_name" />
        <TextView android:id="@+id/fullnameTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/doctor_email" />
        <TextView android:id="@+id/emailTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/doctor_phone" />
        <TextView android:id="@+id/phoneTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/doctor_gender" />
        <TextView android:id="@+id/genderTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/dob" />
        <TextView android:id="@+id/dateofbirthTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/specialty" />
        <TextView android:id="@+id/specialityTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/years_experience" />
        <TextView android:id="@+id/yearsofexperienceTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/experience_details" />
        <TextView android:id="@+id/experiencedetailTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/license_number" />
        <TextView android:id="@+id/licenseTextView" style="@style/ProfileValue" />

        <TextView style="@style/ProfileLabel" android:text="@string/address" />
        <TextView android:id="@+id/addressTextView" style="@style/ProfileValue" />

        <!-- Buttons -->
        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor_edit_profile"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
