<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/mainLayout"
    android:background="@drawable/ic_bbackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        app:navigationContentDescription="@string/nav_drawer_open" />
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_arrow"
        android:layout_marginTop="64dp"
        android:layout_gravity="start"/>


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_timer"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/timerInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_rest_time_hint"
        android:inputType="number"
        android:layout_below="@id/titleTextView"
        android:padding="12dp"
        android:layout_marginTop="44sp" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_default"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:textColor="#FF5722" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:layout_below="@id/timerTextView"
        android:layout_marginTop="56dp"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_timer"
        android:layout_below="@id/startButton"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF9800"
        android:textColor="#FFFFFF" />

</RelativeLayout>
